specify solution folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         dotnet-version: '8.x'
 
+    - name: Change working directory
+      run: cd src  # Change directory to 'src'
+
     - name: Restore dependencies
       run: dotnet restore
 
