--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet build src/PlainBlog.Application.sln --configuration Release
 
     - name: Test and upload coverage for all test projects
-      run: dotnet test src/PlainBlog.Application.sln --configuration Release --collect:"XPlat Code Coverage"
+      run: dotnet test src/PlainBlog.Application.sln --configuration Release --collect:"XPlat Code Coverage" --results-directory:"TestResults"
       # run: |
       #   for project in $(find src -type f -name "*Tests.csproj"); do
       #     project_dir=$(dirname "$project")
@@ -46,9 +46,15 @@ jobs:
     #     dotnet tool install -g dotnet-reportgenerator-globaltool
     #     reportgenerator "-reports:src/**/coverage.cobertura.xml" "-targetdir:merged_coverage"
 
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage
+        path: TestResults
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: src/**/**/coverage.cobertura.xml
+        directory: TestResults
         slug: evaristovidal/plainblog
