Added Post services with unit tests and database migrations

--- a/src/PlainBlog.Application/appsettings.json
+++ b/src/PlainBlog.Application/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProphixARContext": "Server=localhost;User Id=sigma;password=sigma123;Database=PlainBlog;TrustServerCertificate=True;"
+    "PlainBlogContext": "Server=localhost;User Id=postgres;password=example;Port=5433;Database=blog_database;TrustServerCertificate=True;"
   }
 }
