--- a/src/PlainBlog.Store.PostgreSQL/PlainBlog.Store.PostgreSQL.csproj
+++ b/src/PlainBlog.Store.PostgreSQL/PlainBlog.Store.PostgreSQL.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\PlainBlog.Store\PlainBlog.Store.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
