--- a/src/PlainBlog.Application/PlainBlog.Application.csproj
+++ b/src/PlainBlog.Application/PlainBlog.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlainBlog.Posts.Api\PlainBlog.Posts.Api.csproj" />
+    <ProjectReference Include="..\PlainBlog.i18n\PlainBlog.i18n.csproj" />
+    <ProjectReference Include="..\PlainBlog.Post.Api\PlainBlog.Post.Api.csproj" />
+    <ProjectReference Include="..\PlainBlog.Store.PostgreSQL\PlainBlog.Store.PostgreSQL.csproj" />
   </ItemGroup>
 
 </Project>
