--- a/src/PlainBlog.Post.Repository/PlainBlog.Post.Repository.csproj
+++ b/src/PlainBlog.Post.Repository/PlainBlog.Post.Repository.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlainBlog.Post.Abstractions\PlainBlog.Post.Abstractions.csproj" />
     <ProjectReference Include="..\PlainBlog.Store\PlainBlog.Store.csproj" />
   </ItemGroup>
 
