--- a/src/PlainBlog.Post.UnitTests/PlainBlog.Post.UnitTests.csproj
+++ b/src/PlainBlog.Post.UnitTests/PlainBlog.Post.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,19 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.1.2" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlainBlog.Posts.Api\PlainBlog.Posts.Api.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\PlainBlog.Post.Abstractions\PlainBlog.Post.Abstractions.csproj" />
+    <ProjectReference Include="..\PlainBlog.Post.Api\PlainBlog.Post.Api.csproj" />
+    <ProjectReference Include="..\PlainBlog.Post\PlainBlog.Post.csproj" />
   </ItemGroup>
 
 </Project>
