--- a/src/PlainBlog.Application/PlainBlog.Application.csproj
+++ b/src/PlainBlog.Application/PlainBlog.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlainBlog.Author\PlainBlog.Author.csproj" />
     <ProjectReference Include="..\PlainBlog.i18n\PlainBlog.i18n.csproj" />
     <ProjectReference Include="..\PlainBlog.Post.Api\PlainBlog.Post.Api.csproj" />
     <ProjectReference Include="..\PlainBlog.Store.PostgreSQL\PlainBlog.Store.PostgreSQL.csproj" />
