--- a/src/PlainBlog.Author.Repository/PlainBlog.Author.Repository.csproj
+++ b/src/PlainBlog.Author.Repository/PlainBlog.Author.Repository.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PlainBlog.Author.Abstractions\PlainBlog.Author.Abstractions.csproj" />
+    <ProjectReference Include="..\PlainBlog.Store\PlainBlog.Store.csproj" />
   </ItemGroup>
 
 </Project>
