--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
       run: dotnet build src/PlainBlog.Application.sln --configuration Release
 
     - name: Test and upload coverage for all test projects
-      run: dotnet test src/PlainBlog.Application.sln --configuration Release --collect:"XPlat Code Coverage" --results-directory:"TestResults"
+      run: dotnet test src/PlainBlog.Application.sln \
+       --configuration Release \
+       --collect:"XPlat Code Coverage" \
+       --results-directory:"TestResults" \
+       --filter "FullyQualifiedName!~PlainBlog.Store.PostgreSQL.PlainBlogContextDesigner" \
+       --filter "FullyQualifiedName!~PlainBlog.Store.PostgreSQL.Migrations.PlainBlogContextModelSnapshot"
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v2
