--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,7 @@ jobs:
       run: dotnet build src/PlainBlog.Application.sln --configuration Release
 
     - name: Test and upload coverage for all test projects
-      run: dotnet test src/PlainBlog.Application.sln \
-           --configuration Release \
-           --settings "src\CodeCoverage.runsettings" \
-           --collect:"XPlat Code Coverage" \
-           --results-directory:"TestResults" \
+      run: dotnet test src/PlainBlog.Application.sln --configuration Release --settings "src/CodeCoverage.runsettings" --collect:"XPlat Code Coverage" --results-directory:"TestResults" \
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v2
